--- a/registration.html
+++ b/registration.html
@@ -1,36 +1,72 @@
 <!DOCTYPE html>
 <html>
+    <title>REGISTRATION</title>
     <style>
+        h1{
+            text-align: center;
+        }
         body {
             align-items: center;
             background-size: cover;
             margin-left: 5rem;
             background-repeat: no-repeat;
-            background-image:url("https://images.unsplash.com/photo-1524946274118-e7680e33ccc5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MjJ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
+            background-image:url("image2.jpg");
         }
+        .overall{
+           margin-left: 20%;
+            margin-right: 20%;
+            border: 2px solid;
+            padding-top: 5%;
+            padding-left: 5%;
+            padding-right:5% ;
+            padding-bottom: 5%;
+            background-color:unset;
+        }
+        .button{
+            margin-left: 10%;
+        }
+        #yname{
+            margin-left: 5%;
+            padding: 1%;
+            border-radius: 2%;
+          }
+          #dob{
+              margin-left: 1%;
+              padding: 1.2%;
+              border-radius: 2%;
+          }
+          #email{
+            margin-left: 8%;
+              padding: 1.2%;
+              border-radius: 2%;
+          }
     </style>
     <head>
-        <h1>REGISTRATION FIRST</h1>
+        
     </head>
     <body>
-        <form action="Projecttry.html">
-            <label>YOUR NAME</label>
+        <h1>REGISTRATION FIRST</h1>
+        <div class="overall">
+        <form action="index.html">
+            <label> <b> YOUR NAME </b> </label>
             <input type="text" id="yname" value="your name" check required><br>
             <br>
-            <label>DATE OF BIRTH</label>
+            <label> <b> DATE OF BIRTH </b> </label>
             <input type="date" id="dob" value="dob"><br>
         <br>
 
-            <label>EMAIL ID</label>
+            <label> <b> EMAIL ID </b> </label>
             <input type="email" id="email" >
             <br>
              <br>
-            <label>SELECT ROLE</label>
+            <label> <b> SELECT ROLE </b> </label>
             <input type="radio" name="role" value="user" check required> USER
             <input type="radio" name="role" value="ADMIN" check required> ADMIN
             <br>
-            <button type="submit">submit</button><br>
+            <br>
+            <button class="button" type="submit">submit</button><br>
             <br>
         </form>
+    </div>
     </body>
 </html>
