--- a/loginpage.html
+++ b/loginpage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  
   <title>LOGINPAGE</title>
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
@@ -8,7 +9,7 @@ form {border: 3px solid #f1f1f1;}
 input[type=text], input[type=password] {
   width: 100%;
   padding: 12px 20px;
-  margin: 8px 0;
+  margin: 8px ;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
@@ -70,10 +71,10 @@ span.psw {
   </div>
 
   <div class="container">
-    <label for="uname"><b>Username</b></label>
+    <label for="uname"><strong>Username</strong></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
 
-    <label for="psw"><b>Password</b></label>
+    <label for="psw"><strong>Password</strong></label>
     <input type="password" minlength="6" placeholder="Enter Password" name="psw" required>
         
     <button type="submit">Login</button>
