--- a/registration.html
+++ b/registration.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
     <title>REGISTRATION</title>
     <style>
+        * {
+            color:black 
+        }
         h1{
+            color:lightcoral;
             text-align: center;
         }
         body {
@@ -10,7 +14,7 @@
             background-size: cover;
             margin-left: 5rem;
             background-repeat: no-repeat;
-            background-image:url("image2.jpg");
+          background-image:url("p.jpg");
         }
         .overall{
            margin-left: 20%;
@@ -23,7 +27,9 @@
             background-color:unset;
         }
         .button{
+            height: 30px;
             margin-left: 10%;
+            width: 20%;
         }
         #yname{
             margin-left: 5%;
@@ -36,8 +42,18 @@
               border-radius: 2%;
           }
           #email{
-            margin-left: 8%;
+            margin-left: 9%;
               padding: 1.2%;
+              border-radius: 2%;
+          }
+          #password{
+              margin-left: 6%;
+              border-radius: 2%;
+              padding: 2%;
+          }
+          #Username{
+              margin-left:6%;
+              padding: 2%;
               border-radius: 2%;
           }
     </style>
@@ -47,21 +63,24 @@
     <body>
         <h1>REGISTRATION FIRST</h1>
         <div class="overall">
-        <form action="index.html">
-            <label> <b> YOUR NAME </b> </label>
+        <form action="loginpage.html">
+            <label> <strong> YOUR NAME </strong> </label>
             <input type="text" id="yname" value="your name" check required><br>
             <br>
-            <label> <b> DATE OF BIRTH </b> </label>
+            <label> <strong> DATE OF BIRTH </strong> </label>
             <input type="date" id="dob" value="dob"><br>
         <br>
 
-            <label> <b> EMAIL ID </b> </label>
+            <label> <strong> EMAIL ID </strong> </label>
             <input type="email" id="email" >
             <br>
-             <br>
-            <label> <b> SELECT ROLE </b> </label>
-            <input type="radio" name="role" value="user" check required> USER
-            <input type="radio" name="role" value="ADMIN" check required> ADMIN
+            <br>
+            <label> <strong>USERNAME</strong> </label>
+            <input type="text" id="Username" value="user name" autofocus >
+            <br>
+            <br>
+            <label> <strong>PASSWORD</strong> </label>
+            <input type="text" id="password" name="password" value="password" placeholder="Password" required auto>
             <br>
             <br>
             <button class="button" type="submit">submit</button><br>
