--- a/loginpage.html
+++ b/loginpage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+  <head>
   <title>LOGINPAGE</title>
 <style>
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
+body
+ {font-family: Arial, Helvetica, sans-serif;}
+form
+ {border: 3px solid #f1f1f1;}
 
 input[type=text], input[type=password] {
   width: 100%;
