--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          </script>
            
    <div class="hi1">
-    <marquee><strong>On account of COVID-19 pandemic and subsequent Govt. advisories there will be delays in processing of PAN applications.</strong></marquee>
+    <marquee> On account of COVID-19 pandemic and subsequent Govt. advisories there will be delays in processing of PAN applications.</marquee>
 </div>
 <div class="overall">
 <div class="personal">
