--- a/lastpage.html
+++ b/lastpage.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title>APPLIED</title>
+<head> 
+<title>APPLIED</title>
     <style>
         h2{
             margin-left: 20%;
             margin-top: 20%;
         }
     </style>
+    </head>
    <h2> YOUR PANCARD APPLICATION SUBMITED SUCCESSFULLY </h2>
 
 </html>
