--- a/residential.html
+++ b/residential.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>RESIDENTIAL</title>
     <style>
@@ -9,6 +10,7 @@
         }
 
         .overall {
+            box-sizing: border-box;
             color: whitesmoke;
             padding-bottom: 2%;
             border-radius: 20px;
@@ -75,19 +77,19 @@
         <form onsubmit="residential()">
             <div class="house">
                 <label> <strong> No./ Building / Village </strong> </label>
-                <input class="no" id="no" type="text" placeholder="No./ Building / Village" required>
+                <input class="no" id="no" type="text" placeholder="No./ Building / Village">
                 <br>
                 <label> <strong> Area/ Road/ P.O. </strong> </label>
-                <input class="area" id="area" type="text" name="Area" placeholder="Area/ Road/ P.O." required>
+                <input class="area" id="area" type="text" name="Area" placeholder="Area/ Road/ P.O.">
                 <br>
                 <label> <strong> City/ Town/ District</strong> </label>
-                <input class="city" id="city" type="text" name=" City" placeholder=" City/ Town/ District" required>
+                <input class="city" id="city" type="text" name=" City" placeholder=" City/ Town/ District">
                 <br>
                 <label> <strong> State </strong> </label>
-                <input class="state" id="state" type="text" name="State" placeholder="state" required>
+                <input class="state" id="state" type="text" name="State" placeholder="state">
                 <br>
                 <label> <strong> Pin Code </strong> </label>
-                <input class="pin" id="pin" type="text" name="Pin Code" placeholder="Pin Code" required>
+                <input class="pin" id="pin" type="text" name="Pin Code" placeholder="Pin Code">
                 <br>
             </div>
             <div class=" DOCUMENTPROOF">
