--- a/registration.html
+++ b/registration.html
@@ -1,90 +1,149 @@
 <!DOCTYPE html>
-<html  lang="en">
-    <head>
+<html lang="en">
+
+<head>
     <title>REGISTRATION</title>
     <style>
         * {
-            color:black 
+            color: black
         }
-        h1{
-            color:lightcoral;
+
+        h1 {
+            color: white;
             text-align: center;
         }
+
         body {
+            box-sizing: border-box;
+            background-color: rgb(109, 167, 63);
             align-items: center;
             background-size: cover;
             margin-left: 5rem;
             background-repeat: no-repeat;
-          background-image:url("p.jpg");
+            background-image: url("image/d.jpg");
         }
-        .overall{
-           margin-left: 20%;
+
+        .overall {
+            margin-left: 20%;
             margin-right: 20%;
             border: 2px solid;
             padding-top: 5%;
             padding-left: 5%;
-            padding-right:5% ;
+            padding-right: 5%;
             padding-bottom: 5%;
-            background-color:unset;
+            background-color: unset;
         }
-        .button{
+
+        .button {
             height: 30px;
-            margin-left: 10%;
+            margin-left: 25%;
             width: 20%;
         }
-        #yname{
-            margin-left: 5%;
+
+        #yname {
+            margin-left: 20%;
             padding: 1%;
             border-radius: 2%;
-          }
-          #dob{
-              margin-left: 1%;
-              padding: 1.2%;
-              border-radius: 2%;
-          }
-          #email{
+        }
+
+        #datebirth {
+            margin-left: 16.5%;
+            padding: 1.2%;
+            border-radius: 2%;
+        }
+
+        #email1 {
+            margin-left: 24%;
+            padding: 1.2%;
+            border-radius: 2%;
+        }
+
+        #password {
+            margin-left: 11%;
+            border-radius: 2%;
+            padding: 2%;
+        }
+
+        #Username {
+            margin-left: 21.5%;
+            padding: 2%;
+            border-radius: 2%;
+        }
+
+        #confirmpassword {
+            border-radius: 2%;
             margin-left: 9%;
-              padding: 1.2%;
-              border-radius: 2%;
-          }
-          #password{
-              margin-left: 6%;
-              border-radius: 2%;
-              padding: 2%;
-          }
-          #Username{
-              margin-left:6%;
-              padding: 2%;
-              border-radius: 2%;
-          }
-    </style>        
-    </head>
-    <body>
-        <h1>REGISTRATION FIRST</h1>
-        <div class="overall">
-        <form action="loginpage.html">
+            padding: 2%;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>REGISTRATION FIRST</h1>
+    <div class="overall">
+        <form onsubmit="registration()">
             <label> <strong> YOUR NAME </strong> </label>
-            <input type="text" id="yname" value="your name" check required><br>
+            <input type="text" id="yname" placeholder="your name"><br>
             <br>
             <label> <strong> DATE OF BIRTH </strong> </label>
-            <input type="date" id="dob" value="dob"><br>
-        <br>
+            <input type="date" id="datebirth"><br>
+            <br>
 
             <label> <strong> EMAIL ID </strong> </label>
-            <input type="email" id="email" >
+            <input type="email" id="email1">
             <br>
             <br>
             <label> <strong>USERNAME</strong> </label>
-            <input type="text" id="Username" value="user name" autofocus >
+            <input type="text" id="Username">
             <br>
             <br>
-            <label> <strong>PASSWORD</strong> </label>
-            <input type="text" id="password" name="password" value="password" placeholder="Password" required auto>
+            <label> <strong>CREATE PASSWORD</strong> </label>
+            <input type="password" id="password" name="password" placeholder="Password">
+            <br>
+            <br>
+            <label> <strong>CONFIRM PASSWORD </strong> </label>
+            <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password">
             <br>
             <br>
             <button class="button" type="submit">submit</button><br>
             <br>
         </form>
     </div>
-    </body>
+    <script>
+        function registration() {
+            event.preventDefault();
+            const name = document.querySelector("#yname").value;
+            if (name == "" || name == null) {
+                alert("Enther_Your_Name")
+                return false;
+            }
+            const dateofbirth = document.querySelector("#datebirth").value;
+            if (dateofbirth == " ") {
+                alert("Enter_date_of_birth")
+                return false;
+            }
+            const emailid = document.querySelector("#email1").value;
+            if (emailid == " ") {
+                alert("Enter_your_mailID")
+                return false;
+            }
+            const user_name = document.querySelector("#Username").value;
+            if (user_name == "") {
+                alert("Enter_User_name")
+                return false;
+            }
+            const password1 = document.querySelector("#confirmpassword").value;
+            if (password1 == "") {
+                alert("invalid_password")
+                return false;
+            }
+
+
+            console.log(name + " " + dateofbirth + " " + emailid + " " + user_name + "" + password1)
+            alert("success");
+            window.location.href = "loginpage.html";
+        }
+    </script>
+</body>
+
 </html>
