--- a/lastpage.html
+++ b/lastpage.html
@@ -3,9 +3,13 @@
 <head> 
 <title>APPLIED</title>
     <style>
+        body{
+            background-image:url(image12.jpg)
+        }
         h2{
             margin-left: 20%;
-            margin-top: 20%;
+            margin-top: 18%;
+            font-size:  30px;
         }
     </style>
     </head>
