--- a/lastpage.html
+++ b/lastpage.html
@@ -13,6 +13,7 @@
         }
     </style>
     </head>
+    <body>
    <h2> YOUR PANCARD APPLICATION SUBMITED SUCCESSFULLY </h2>
-
+</body>
 </html>
