--- a/residential.html
+++ b/residential.html
@@ -33,50 +33,15 @@
             <div class="select_address_proof">
                 <label> <strong> Select Address Proof </strong> </label><br>
                 <select name="Select Address Proof" id="Select Address Proof">
+                    <option>Please Select</option>
                     <option value="Aadhaar">Aadhaar Card</option>
                     <option value="PASSPORT">PASSPORT</option>
                     <option value="VOTER ID">VOTER ID card which is having complete Date of Birth</option>
-                    <option value="Driving License">Driving License</option>
-                    <option value="Bank Account">Bank Account Statement not more than 3 months old</option>
-                    <option value="Gas bill ">Gas bill not more than 3 months old</option>
-                    <option value="Employer certificate">Employer certificate in ORIGINAL</option>
-                    <option value="Passport of the Spouse">Passport of the Spouse</option>
-                    <option value="Property registration">Property registration document</option>
                 </select><br>
                 <br>
-
                 <label> <strong> Upload Your Select Address Proof </strong> </label>
                 <br>
                 <input type="file" name="address" id="myfile1"><br><br>
-
-                <br>
-                <label> <strong> Identity Proof </strong> </label><br>
-                <select name="Identity_Proof" id="Identity_Proof" placeholder="Identity Proof">
-                    <option value="Aadhaar">Aadhaar Card</option>
-                    <option value="PASSPORT">PASSPORT</option>
-                    <option value="VOTER_ID">VOTER ID card which is having complete Date of Birth
-                </select>
-                <br>
-                <br>
-
-                <label> <strong> Upload Your Identity Proof </strong> </label><br>
-                <input type="file" name="identity" id="myfile2"><br><br>
-
-                <br>
-                <label> <strong> DOB Proof </strong> </label>
-                <select name="Dob" id="dob" placeholder="Date of birth">
-                    <option value="Aadhaar">Aadhaar Card</option>
-                    <option value="Passport">Passport</option>
-                    <option value="Driving License">Driving License</option>
-                    <option value="Pension_payment">Pension payment order</option>
-                </select>
-                <br>
-                <br>
-                <label> <strong> Uplaod Your Dob Proof </strong> </label><br>
-                <input type="file" name="dob" id="myfile3"><br><br>
-
-                <br>
-
                 <label> <strong> Upload Your Photo </strong> </label>
                 <br>
                 <input type="file" name="myphoto" id="myfile4"><br><br>
