--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <body>
       <link rel="stylesheet" href="style.css">
 
-      <img src="https://pancardsevaa-online.org/assets/img/PAN%20Card%20Logo.png" alt="pancard">
+      <img src="asset/image/PANCardLogo.png" alt="pancard">
       <br>
-      <img class="change" src="https://pancardsevaa-online.org/assets/img/shopact-msme-gst-swacha-bharat.png"
-            alt="pancard1">
+      <img class="change" src="asset/image/glass.png"  alt="pancard1">
       <h1>ONLINE APPLY PAN CARD</h1>
 
       <header id="header"></header>
@@ -49,7 +48,7 @@
                               <br>
                               <label> <strong> Father Name </strong> </label><br>
                               <span class="ffirstname">
-                                    <input type="text" id="ffirst" placeholder="Father First name"
+                                    <input type="text" id="fathername" placeholder="Father First name"
                                           name="father first name">
                               </span>
                               <span class="fmiddlename">
@@ -63,8 +62,8 @@
                               <br>
                               <label> <strong> Mather Name </strong> </label><br>
                               <span class="mfirstname">
-                                    <input type="text" id="mfirst" placeholder="mother First name"
-                                          name="mother first name">
+                                    <input type="text" id="mathername" placeholder="mother First name"
+                                          name="mother_first_name">
                               </span>
                               <span class="mmiddlename">
                                     <input type="text" id="mmiddle" placeholder="mother middle name"
@@ -85,7 +84,7 @@
                               <label> <strong>Date Of Birth</strong> </label><br>
                               <input type="date" name="date of birth" id="dob" placeholder="date of birth"> <br>
                               <label> <strong> Aadhar Number </strong> </label><br>
-                              <input type="number" name="number" id="aadharnumber" placeholder="Aadhar number"><br>
+                              <input type="tel" name="number" id="aadharnumber" minlength="12" placeholder="Aadhar number"><br>
 
                               <label> <strong> Gender </strong> </label>
                               <br>
