--- a/registration.html
+++ b/registration.html
@@ -5,6 +5,10 @@
     <title>REGISTRATION</title>
 </head>
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+        integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
     <link rel="stylesheet" href="registration.css">
     <h1>REGISTRATION FIRST</h1>
     <div class="overall">
@@ -18,6 +22,10 @@
 
             <label> <strong> EMAIL ID </strong> </label>
             <input type="email" id="email1">
+            <br>
+            <br>
+            <label> <strong> MOBILE NUMBER </strong> </label>
+            <input type="tel" id="number" minlength="10" maxlength="10" required>
             <br>
             <br>
             <label> <strong>USERNAME</strong> </label>
