--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+      <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title> PAN CARD APPLICATION </title>
-
 </head>
-
 <body>
       <link rel="stylesheet" href="style.css">
 
@@ -48,30 +48,30 @@
                               </span>
                               <br>
                               <label> <strong> Father Name </strong> </label><br>
-                              <span class="ffirstname">
+                              <span class="fatherfirstname">
                                     <input type="text" id="fathername" placeholder="Father First name"
                                           name="father first name">
                               </span>
-                              <span class="fmiddlename">
-                                    <input type="text" id="fmiddle" placeholder="father middle name"
+                              <span class="fathermiddlename">
+                                    <input type="text" id="fathermiddle" placeholder="father middle name"
                                           name="father middle name">
                               </span>
-                              <span class="flastname">
-                                    <input type="text" id="flast" placeholder="father last name"
+                              <span class="fatherlastname">
+                                    <input type="text" id="fatherlast" placeholder="father last name"
                                           name="father last name">
                               </span>
                               <br>
                               <label> <strong> Mather Name </strong> </label><br>
-                              <span class="mfirstname">
+                              <span class="motherfirstname">
                                     <input type="text" id="mathername" placeholder="mother First name"
                                           name="mother_first_name">
                               </span>
-                              <span class="mmiddlename">
-                                    <input type="text" id="mmiddle" placeholder="mother middle name"
+                              <span class="mothermiddlename">
+                                    <input type="text" id="mothermiddle" placeholder="mother middle name"
                                           name="mother middle name">
                               </span>
-                              <span class="mlastname">
-                                    <input type="text" id="mlast" placeholder="mather last name"
+                              <span class="motherlastname">
+                                    <input type="text" id="motherlast" placeholder="mather last name"
                                           name="mother last name">
                               </span><br>
                               <label> <strong> Mobile No </strong> </label><br>
