--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
     <nav class="navbar">
         <a class="navbar" href="registration.html"> REGISTRATION</a>
         <a class="navbar" href="aadhar.html"> AADHAR</a>
-        <a class="navbar" href="passport.html"> PASSPORT</a>
+        <a class="navbar" href="requiredproof.html"> REQUIRED PROOF</a>
         <a class="navbar" href="driving.html"> DRIVING APPLICATION</a>
     </nav>
 </header>
