--- a/loginpage.html
+++ b/loginpage.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+  <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LOGINPAGE</title>
 </head>
 
@@ -23,10 +25,7 @@
         <label for="psw"><strong>Password</strong></label>
         <input type="password" minlength="6" id="password" placeholder="Enter Password" name="psw">
         <button type="submit">Login</button>
-        <label>
-          <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
-      </div>
+         </div>
       <div class="container" style="background-color:#f1f1f1">
         <span class="psw">Forgot <a href="#">password?</a></span>
       </div>
